# TEST

./: .gitignore  README.md  function_app.py  host.json  index.html  package-lock.json  package.json  requirements.txt
.github/workflows/: TotalWorkflow.yml  main_crawler.yml  main_lna-crawl.yml  main_lna-crawler.yml  main_testcons.yml  total_work_flow.yml
TEST/: function_app.py
TimerTrigger1/: __init__.py  function.json
backend/: .gitignore  .pre-commit-config.yaml  .pyre_configuration  .pyrepath  README.md  pyproject.toml  pyrightconfig.json
backend/evaluations/: db_eval.ipynb  summarizer_eval.ipynb
backend/function-app/: README.md  function_app.py  requirements.txt
backend/function-app/aggregators/: aggregator.py  time_based_aggregator.py
backend/lna-aggregators/: README.md  pyproject.toml
backend/lna-aggregators/lna_aggregators/: summarizer.py  time_based_aggregator.py
backend/lna-aggregators/tests/: test_summarizer.py  test_time_based_aggregator.py
backend/lna-app/: README.md  pyproject.toml
backend/lna-app/lna_app/: auth_utils.py  latency_utils.py  main.py
backend/lna-app/lna_app/api/: auth.py  news.py  users.py
backend/lna-app/lna_app/schema/: schema.py
backend/lna-app/lna_app/services/: clustering.py  news_service.py
backend/lna-app/tests/: test_news.py  test_news_service.py  test_schema.py  test_users.py
backend/lna-crawlers/: pyproject.toml
backend/lna-crawlers/lna_crawlers/: Crawler.py  __init__.py  crawler.py  evaluation.ipynb  function.json
backend/lna-crawlers/lna_crawlers/mayadeen_alnahar_crawlers/: function_app.py  host.json  requirements.txt
backend/lna-db/: pyproject.toml
backend/lna-db/lna_db/db/: db.py  mock_db.py  mongo.py  session.py
backend/lna-db/lna_db/models/: news.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: Appbar.tsx  AuthCallback.tsx  Filter.tsx  LoginError.tsx  LoginSuccess.tsx  News.ts  NewsCard.tsx  NewsStack.tsx  PreferencesForm.tsx
frontend/src/schema/: news.ts
frontend/src/services/: newsService.ts
frontend/src/types/: types.ts
src/: App.tsx
src/components/: Appbar.tsx  News.ts  NewsCard.tsx  NewsStack.tsx
