[tool.poetry]
name = "lna-backend"
version = "0.1.0"
description = "LNA Backend Monorepo"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pyre-check = "^0.9.23"
ruff = "^0.9.7"
pre-commit = "^4.1.0"
pyright = "^1.1.394"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Common linting configuration that can be shared across packages
[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "B", "I"]

[tool.pyre]
source_directories = [
    "lna-app/lna_app",
    "lna-db/lna_db",
    "lna-crawlers/lna_crawlers"
] 