[tool.poetry]
name = "lna-backend"
version = "0.1.0"
description = "LNA Backend Monorepo"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
motor = "^3.3.2"
beanie = "^1.29.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
google-auth = "^2.27.3"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
httpx = "^0.28.1"
python-dotenv = "^1.0.0"
pydantic = "^2.6.4"
pyre-check = "^0.9.23"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pre-commit = "^4.1.0"
pyright = "^1.1.394"
httpx = "^0.28.1"
pyre-check = "^0.9.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Common linting configuration that can be shared across packages
[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "B", "I"]

[tool.pyre]
source_directories = [
    "lna-app/lna_app",
    "lna-db/lna_db",
    "lna-crawlers/lna_crawlers",
]
