[project]
name = "lna-app"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "motor (>=3.7.0,<4.0.0)",
    "mongomock (>=4.3.0,<5.0.0)",
    "pymongo (>=4.11.1,<5.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "beanie (>=1.29.0,<2.0.0)",
    "mongomock-motor (>=0.0.35,<0.0.36)",
    "httpx (>=0.28.1,<0.29.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
lna-db = { path = "../lna-db", develop = true }