[project]
name = "lna-crawlers"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "langdetect (>=1.0.9,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "azure-functions (>=1.21.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
lna-db = { path = "../lna-db", develop = true }
