[tool.poetry]
name = "lna-db"
version = "0.1.0"
description = "Database module for LNA"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "lna_db" }]
[tool.poetry.dependencies]
python = ">=3.11, <4.0"
beanie = "^1.29.0"
pydantic = "^2.0.0"
motor = "^3.0.0"
typing-extensions = "^4.7.0"
click = "^8.0.0"
toml = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
